--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "datamotto-library",
+  "name": "react-library-starter",
   "version": "0.0.1",
   "license": "MIT",
   "main": "./lib/cjs/index.js",
@@ -23,15 +23,20 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@types/react": "^17.0.6",
+    "@types/react-dom": "^17.0.5",
+    "classnames": "^2.3.1",
+    "node-sass": "^6.0.1",
+    "postcss": "^8.4.4",
+    "postcss-loader": "^6.2.1",
     "rollup": "^2.60.2",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.1",
-    "typescript": "^4.5.2",
-    "@types/react": "^17.0.6",
-    "@types/react-dom": "^17.0.5"
+    "typescript": "^4.5.2"
   }
 }
