--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "rollup -c",
     "watch": "rollup -cw"
   },
-  "author": "Alireza Souran <alirezasoran@gmail.com>",
+  "author": "Souran <iamsouran@gmail.com>",
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
